--- a/home.html
+++ b/home.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-
-
 <body>
-    <button type="button" class="button_check">Play Round</button> </br></br>
-    
-    
-    <script src = "js/learn.js"></script>
+    <button type="button" class="button_start">Start Game</button>
+    <button type="button" class="button_roll" disabled>Roll Dice</button>
+    <div id="player1">
+        <h2>Player 1</h2>
+        <p>Score: <span id="p1score">0</span></p>
+        <p>Rounds Won: <span id="p1rounds">0</span></p>
+    </div>
+    <div id="player2">
+        <h2>Player 2</h2>
+        <p>Score: <span id="p2score">0</span></p>
+        <p>Rounds Won: <span id="p2rounds">0</span></p>
+    </div>
+    <div id="gameInfo">
+        <p>Total Rounds: <span id="totalRounds">0</span></p>
+        <p>Rounds Played: <span id="roundsPlayed">0</span></p>
+        <p>Current Round: <span id="currentRound">0</span></p>
+    </div>
 
+    <script src="js/learn.js"></script>
 </body>
 
+</html>
