--- a/home.html
+++ b/home.html
@@ -10,6 +10,16 @@
 <body>
     <button type="button" class="button_start">Start Game</button>
     <button type="button" class="button_roll" disabled>Roll Dice</button>
+    <br>
+
+    <div id = "dice">
+        Dice 1: <span id="dices[0]">0</span>
+        Dice 2: <span id="dices[1]">0</span>
+        Dice 3: <span id="dices[2]">0</span>
+    </div>
+
+
+
     <div id="player1">
         <h2>Player 1</h2>
         <p>Score: <span id="p1score">0</span></p>
