--- a/home.html
+++ b/home.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dice Game</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-    <button type="button" class="button_start">Start Game</button>
-    <button type="button" class="button_roll" disabled>Roll Dice</button>
-    <br>
+  <h1>Dice Game</h1>
 
-    <div id = "dice">
-        Dice 1: <span id="dices[0]">0</span>
-        Dice 2: <span id="dices[1]">0</span>
-        Dice 3: <span id="dices[2]">0</span>
-    </div>
+  <button onclick="startGame()">Start Game</button>
+
+
+  <button id="rollDiceBtn" onclick="rollDice()" disabled>Roll Dice</button>
 
 
 
-    <div id="player1">
-        <h2>Player 1</h2>
-        <p>Score: <span id="p1score">0</span></p>
-        <p>Rounds Won: <span id="p1rounds">0</span></p>
-    </div>
-    <div id="player2">
-        <h2>Player 2</h2>
-        <p>Score: <span id="p2score">0</span></p>
-        <p>Rounds Won: <span id="p2rounds">0</span></p>
-    </div>
-    <div id="gameInfo">
+
+  <div id="Dice">
+    <p><span id="die0">0</span></p>
+    <p><span id="die1">0</span></p>
+    <p><span id="die2">0</span></p>
+  </div>
+
+  <div id = "scoreInfo">
+    <p>Player 1 Score: <span id = "p1score">0</span></p>
+    <p>Player 1 Rounds Won: <span id = "p1rounds">0</span></p>
+    <p>Player 2 Score: <span id = "p2score">0</span></p>
+    <p>Player 2 Rounds Won: <span id = "p2rounds">0</span></p>
+  </div>
+
+
+    <div id="roundInfo">
+        <p>Current Round: <span id="currentRound">1</span></p>
         <p>Total Rounds: <span id="totalRounds">0</span></p>
-        <p>Rounds Played: <span id="roundsPlayed">0</span></p>
-        <p>Current Round: <span id="currentRound">0</span></p>
+        <p>Current Player: <span id="currentPlayer">0</span></p>
     </div>
 
-    <script src="js/learn.js"></script>
-</body>
+ 
 
+    <script src="script.js"></script>
+  </div>
+</body>
 </html>
