--- a/home.html
+++ b/home.html
@@ -1,45 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dice Game</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-  <h1>Dice Game</h1>
+  <div class="container">
+    <h1>Dice Game</h1>
 
-  <button onclick="startGame()">Start Game</button>
+    <button onclick="startGame()">Start Game</button>
+    <button id="rollDiceBtn" onclick="rollDice()" disabled>Roll Dice</button>
 
-
-  <button id="rollDiceBtn" onclick="rollDice()" disabled>Roll Dice</button>
-
-
-
-
-  <div id="Dice">
-    <p><span id="die0">0</span></p>
-    <p><span id="die1">0</span></p>
-    <p><span id="die2">0</span></p>
-  </div>
-
-  <div id = "scoreInfo">
-    <p>Player 1 Score: <span id = "p1score">0</span></p>
-    <p>Player 1 Rounds Won: <span id = "p1rounds">0</span></p>
-    <p>Player 2 Score: <span id = "p2score">0</span></p>
-    <p>Player 2 Rounds Won: <span id = "p2rounds">0</span></p>
-  </div>
-
-
-    <div id="roundInfo">
-        <p>Current Round: <span id="currentRound">1</span></p>
-        <p>Total Rounds: <span id="totalRounds">0</span></p>
-        <p>Current Player: <span id="currentPlayer">0</span></p>
+    <div id="Dice">
+      <p><span id="die0">0</span></p>
+      <p><span id="die1">0</span></p>
+      <p><span id="die2">0</span></p>
     </div>
 
- 
+    <div id="scoreInfo">
+      <p>Player 1 Score: <span id="p1score">0</span></p>
+      <p>Player 1 Rounds Won: <span id="p1rounds">0</span></p>
+      <p>Player 2 Score: <span id="p2score">0</span></p>
+      <p>Player 2 Rounds Won: <span id="p2rounds">0</span></p>
+    </div>
 
-    <script src="script.js"></script>
+    <div id="roundInfo">
+      <p>Current Round: <span id="currentRound">1</span></p>
+      <p>Total Rounds: <span id="totalRounds">0</span></p>
+      <p>Current Player: <span id="currentPlayer">0</span></p>
+    </div>
+
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
