--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
   <div class="container">
     <h1>Dice Game</h1>
 
-    <button onclick="startGame()">Start Game</button>
+    <button onclick="startGame()">Start / Restart Game</button>
     <button id="rollDiceBtn" onclick="rollDice()" disabled>Roll Dice</button>
 
     <div id="Dice">
